updated pom for version